--- a/pages/admin.html
+++ b/pages/admin.html
@@ -205,7 +205,7 @@
                 
                 </div>
 
-                <div class="d-flex justify-content-end ">
+                <div class="d-flex justify-content-end mb-6">
                     <button type="button" class="rounded-0 p-1 btn btn-outline-success"><img class="img-header" src="../assets/images/chevron_left_24dp_212529_FILL1_wght200_GRAD200_opsz24.png" alt=""></button>
                     <button type="button" class="rounded-0 py-9 px-10 btn btn-outline-success bg-success text-white">1</button>
                     <button type="button" class="rounded-0 py-9 px-10 btn btn-outline-success text-dark">2</button>
