--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </li>
                 </ul>
             </div>
-            <div class="d-flex align-items-center ms-6">
+            <div class="d-flex align-items-center ms-6 mb-6">
                 <div class="flex-shrink-0">
                     <img class="img-user mt-a rounded-circle object-fit-cover" src="/week5/assets/andychen-f14fef59.jpeg" alt="andychen">
                 </div>
